syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";
import "production_process.proto";
import "product_order.proto";

service ProductionStationOutput{
    rpc Add(ProductionStationOutputInfo)returns(CommonResponse){}
    rpc Get(GetProductionStationOutputRequest)returns(GetProductionStationOutputDetailResponse){}
}

message GetProductionStationOutputRequest{
    string productionStationID=1;
    string productInfoID=2;
}

message ProductionStationOutputInfo {
	//ID 
    string id=1;
	//产出时间 
 	string outputTime=2;
	//登录人员ID 
    string loginUserID=3;
    string loginUserName=10;
	//生产工站ID 
    string productionStationID=4;
    ProductionStationInfo productionStation=5;
	//生产工序ID 
    string productionProcessID=6;
    ProductionProcessInfo productionProcess=7;
	//产品信息ID 
    string productInfoID=8;
    ProductInfoInfo productInfo=9;
}

message QueryProductionStationOutputRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//产出时间开始
    // @inject_tag: uri:"outputTime0" form:"outputTime0"
    string outputTime0=5;
    //产出时间结束
    // @inject_tag: uri:"outputTime1" form:"outputTime1"
    string outputTime1=6;
    // 生产产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=7;
    //产品序列号
    // @inject_tag: uri:"productSerialNo" form:"productSerialNo"
    string productSerialNo=8;
    //产品订单号
    // @inject_tag: uri:"productOrderNo" form:"productOrderNo"
    string productOrderNo=9;
}

message QueryProductionStationOutputResponse{
    Code code=1;
    string message=2;
    repeated ProductionStationOutputInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductionStationOutputResponse{
    Code code=1;
    string message=2;
    repeated ProductionStationOutputInfo data=3;
}

message GetProductionStationOutputDetailResponse{
    Code code=1;
    string message=2;
    ProductionStationOutputInfo data=3;
}